--- a/ddoitranslatormodule/ddoi_configurations/kpf_tel_config.ini
+++ b/ddoitranslatormodule/ddoi_configurations/kpf_tel_config.ini
@@ -1,5 +1,5 @@
 [ktl_serv]
-kpf = kpf
+kpf = kpfguide
 
 [ktl_kw_kpf]
 nod_north = nodn
@@ -7,7 +7,7 @@ nod_east = node
 ra_mark = raoffset
 dec_mark = decoffset
 pixel_scale = pscale
-guider_pix_scale = gscale
+guider_pix_scale = pscale
 
 [kpf_parameters]
 det_angle = 0.0
