initial re-organization

--- a/ddoitranslatormodule/ddoi_configurations/default_tel_config.ini
+++ b/ddoitranslatormodule/ddoi_configurations/default_tel_config.ini
@@ -1,40 +1,4 @@
-[ktl_serv]
-acs = acs
-dcs = dcs
-
-[ktl_kw_acs]
-pmfm_nm = pmfm
-
-[ktl_kw_dcs]
-auto_activate = autactiv
-auto_resume = autresum
-auto_go = autgo
-az_offset = azoff
-el_offset = eloff
-ra_offset = raoff
-dec_offset = decoff
-inst_x_offset = instxoff
-inst_y_offset = instyoff
-guider_x_offset = tvxoff
-guider_y_offset = tvyoff
-relative_current = rel2curr
-relative_base = rel2base
-elevation = el
-declination = dec
-target_el = targel
-target_frame = targfram
-rotator_position = rotpposn
-rotator_destination = rotdest
-rotator_mode = rotmode
-rotator_status = rotstat
-move_tel = movetel
-telescope_focus = telfocus
-secondary_move = secmove
-mark_base = mark
-pointing_origin_name = poname
-pointing_origin_select = poselect
-instrument = instrume
-
+; the Observation Block key names
 [ob_keys]
 az_offset = tcs_offset_az
 el_offset = tcs_offset_el
@@ -53,6 +17,7 @@ tel_foc = tcs_cfg_focus
 rot_physical_angle = rot_cfg_pa_physical
 rot_sky_angle = rot_cfg_pa_sky
 
+; keys not in observation block, used by the CLI
 [tel_keys]
 inst_x1 = inst_x1
 inst_y1 = inst_y1
@@ -63,10 +28,12 @@ inst_offset_ypix = inst_offset_ypix
 pmfm_nm = pmfm_nm
 print_only = print_only
 
+; timeout set for the KTL writes
 [ktl_timeout]
 default = 30
 rotpposn = 300
 skypa = 300
 
+; List of Instruments that are supported
 [inst_list]
 insts = DEIMOS, ESI, HIRES, LRIS, KCWI, MOSFIRE, NIRC2, NIRES, NIRSPEC, OSIRIS, KPF
